--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <html>
 	<head>
-		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">		
+		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">	
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />	
 	</head>
 	<body>
 		<nav class="navbar">
@@ -15,18 +16,13 @@
 	    		</div>
 		  	</div>
 	  		<div class="panel-body">
-	  <form action="/digest" method="POST" id="sign-up-form" class="form-horizontal" enctype="multipart/form-data">	
+	  <form action="https://lab4-weeia.s3.amazonaws.com/" method="POST" id="sign-up-form" class="form-horizontal" enctype="multipart/form-data">	
 	
 	<div class="container">
-	<% policy.forEach(function(elem){ %>
-	  <input type="hidden" name= <%= "\"" + elem.name + "\""%> value=<%"\"" + elem.value + "\""%>
+	<% fields	.forEach(function(elem){ %>
+	  <input type="hidden" name="<%= elem.name  %>" value="<%=elem.value %>"
 		<%}); %>
-	<input type="hidden" name="key" value="uploads/${filename}">
-      <input type="hidden" name="AWSAccessKeyId" value="YOUR_AWS_ACCESS_KEY"/> 
-      <input type="hidden" name="acl" value="private"> 
-      <input type="hidden" name="success_action_redirect" value="http://localhost/">
-      <input type="hidden" name="policy" value="YOUR_POLICY_DOCUMENT_BASE64_ENCODED">
-      <input type="hidden" name="signature" value="YOUR_CALCULATED_SIGNATURE">      
+	   
 	<div class="col-xs-5">
 	<div class="form-group">
     	<label for="exampleInputFile">File input</label>
