--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,18 +16,18 @@
 	    		</div>
 		  	</div>
 	  		<div class="panel-body">
-	  <form action="https://lab4-weeia.s3.amazonaws.com/" method="POST" id="sign-up-form" class="form-horizontal" enctype="multipart/form-data">	
+	  <form action="https://<%=bucket%>.s3.amazonaws.com/" method="POST" id="sign-up-form" class="form-horizontal" enctype="multipart/form-data">	
 	
 	<div class="container">
-	<% fields	.forEach(function(elem){ %>
-	  <input type="hidden" name="<%= elem.name  %>" value="<%=elem.value %>"
-		<%}); %>
+	<% fields.forEach(function(elem){ %>
+	  <input type="hidden" name="<%= elem.name  %>" value="<%=elem.value %>"/>
+		<%}); %> 
 	   
 	<div class="col-xs-5">
 	<div class="form-group">
     	<label for="exampleInputFile">File input</label>
     	<input type="file" name="file">
-    	<p class="help-block">Plik zostanie wysłany do: </p>
+    	<p class="help-block">Plik zostanie wysłany do:<%=bucket%> </p>
   </div>
 	
   	
