refactor for laboratory structure

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
 	<div class="form-group">
     	<label for="exampleInputFile">File input</label>
     	<input type="file" name="file">
-    	<p class="help-block">Plik zostanie wysłany do:<%=bucket%> </p>
+    	<p class="help-block">File will be send to the bucket <%=bucket%> </p>
   </div>
 	
   	
